--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "ajv": "8.17.1",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "conf": "^12.0.0",
